# dataharvest

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  export.py  jobs.py  schemas.py  settings.py
backend/app/core/: document_parser.py  exporter.py  extractor.py  fetcher.py  gdrive.py  job_runner.py  merger.py  navigator.py  search.py  source_resolver.py
backend/app/llm/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_compat.py  openai_provider.py  registry.py
backend/app/models/: job.py  schema.py  settings.py  source.py
backend/app/state/: config.py  job_state.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/app/jobs/new/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/templates/: page.tsx
frontend/src/components/: data-preview.tsx  export-buttons.tsx  pin-gate.tsx  progress-tracker.tsx  schema-editor.tsx  source-input.tsx
frontend/src/lib/: api-client.ts  types.ts  utils.ts
recipes/: README.md  ipl-mvp-stats.md
